CP layout: fixed add new widget dropdown height--added max height with overflow auto

--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -61,7 +61,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
  width:300px;
  font-size:1.2em;
  padding:8px;
-height:auto;
+max-height: 670px;
  overflow:auto;
    }
    
